--- a/client/package.json
+++ b/client/package.json
@@ -66,6 +66,7 @@
     "date-fns": "2.22.1",
     "framer-motion": "7.2.0",
     "fuse.js": "6.4.6",
+    "jotai": "^1.9.1",
     "jsona": "1.9.2",
     "lodash-es": "4.17.21",
     "lottie-react": "2.2.1",
