--- a/client/package.json
+++ b/client/package.json
@@ -43,7 +43,7 @@
     "@react-hook/debounce": "4.0.0",
     "@tailwindcss/forms": "0.4.0",
     "@tailwindcss/typography": "0.5.0",
-    "@tanstack/react-query": "^4.2.1",
+    "@tanstack/react-query": "4.2.1",
     "@tanstack/react-table": "8.5.1",
     "@visx/annotation": "2.1.0",
     "@visx/axis": "2.1.0",
@@ -65,7 +65,7 @@
     "date-fns": "2.22.1",
     "framer-motion": "7.2.0",
     "fuse.js": "6.4.6",
-    "jotai": "^1.9.1",
+    "jotai": "1.9.1",
     "jsona": "1.9.2",
     "lodash-es": "4.17.21",
     "lottie-react": "2.2.1",
@@ -86,7 +86,7 @@
     "react-spring": "9.4.2",
     "recharts": "2.1.12",
     "rooks": "5.10.0",
-    "sharp": "^0.31.1",
+    "sharp": "0.31.1",
     "tailwindcss": "3.2.4",
     "uuid": "8.3.2",
     "yup": "0.32.11"
@@ -99,8 +99,8 @@
     "@storybook/addon-interactions": "6.4.22",
     "@storybook/addon-links": "6.4.22",
     "@storybook/addon-postcss": "2.0.0",
-    "@storybook/builder-webpack5": "^6.5.12",
-    "@storybook/manager-webpack5": "^6.5.12",
+    "@storybook/builder-webpack5": "6.5.12",
+    "@storybook/manager-webpack5": "6.5.12",
     "@storybook/react": "6.4.22",
     "@storybook/testing-library": "0.0.11",
     "@types/chroma-js": "2.1.3",
@@ -115,17 +115,17 @@
     "eslint": "8.23.1",
     "eslint-config-next": "12.2.3",
     "eslint-config-prettier": "8.3.0",
-    "eslint-import-resolver-typescript": "^3.5.1",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-import-resolver-typescript": "3.5.1",
+    "eslint-plugin-import": "2.26.0",
     "eslint-plugin-prettier": "3.4.0",
-    "eslint-plugin-storybook": "^0.6.4",
+    "eslint-plugin-storybook": "0.6.4",
     "istanbul-reports": "3.0.0",
     "nyc": "15.1.0",
     "nyc-report-lcov-absolute": "1.0.0",
     "prettier": "2.3.1",
     "start-server-and-test": "1.14.0",
-    "storybook-addon-next": "^1.6.9",
-    "storybook-addon-swc": "^1.1.8",
+    "storybook-addon-next": "1.6.9",
+    "storybook-addon-swc": "1.1.8",
     "typescript": "4.8.3",
     "webpack": "5"
   },
