--- a/client/package.json
+++ b/client/package.json
@@ -78,6 +78,7 @@
     "rooks": "5.10.0",
     "sharp": "^0.31.1",
     "tailwindcss": "3.2.4",
+    "use-debounce": "^9.0.3",
     "uuid": "8.3.2",
     "yup": "0.32.11"
   },
